--- a/src/my-app.html
+++ b/src/my-app.html
@@ -20,11 +20,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-
 <link rel="import" href="my-icons.html">
 
 <link rel="lazy-import" href="my-inputdata.html">
-<link rel="lazy-import" href="my-gdata.html">
+<link rel="lazy-import" href="my-getdata.html">
 <link rel="lazy-import" href="my-view404.html">
 
 <dom-module id="my-app">
@@ -86,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="inputdata" href="[[rootPath]]inputdata">Input Data</a>
-          <a name="gdata" href="[[rootPath]]gdata">G Data</a>
+          <a name="getdata" href="[[rootPath]]getdata">Get Data</a>
         </iron-selector>
       </app-drawer>
 
@@ -106,7 +105,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             fallback-selection="view404"
             role="main">
           <my-inputdata name="inputdata"></my-inputdata>
-          <my-gdata name="gdata"></my-gdata>
+          <my-getdata name="getdata"></my-getdata>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
@@ -141,7 +140,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _routePageChanged(page) {
         // If no page was found in the route data, page will be an empty string.
         // Default to 'auton' in that case.
-        this.page = page || 'inputdata';
+        this.page = page || 'getdata';
 
         // Close a non-persistent drawer when the page & route are changed.
         if (!this.$.drawer.persistent) {
