Remove incorrect character from string concatnation

--- a/src/my-inputdata.html
+++ b/src/my-inputdata.html
@@ -204,7 +204,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 										this.$.comments.value = data.comments;
 								},
 			 					error: function(data) {
-										this.$.warning_log.innerHTML = "<br> <h4> ERROR </h4> Did not load data, " \
+										this.$.warning_log.innerHTML = "<br> <h4> ERROR </h4> Did not load data, " 
 													+ "prior data might exist. Be wary when uploading<br>";
 								}
 						});
