--- a/src/my-app.html
+++ b/src/my-app.html
@@ -24,7 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="lazy-import" href="my-inputdata.html">
 <link rel="lazy-import" href="my-experiment.html">
-<link rel="lazy-import" href="my-getdata.html">
+<link rel="lazy-import" href="my-viewdata.html">
 <link rel="lazy-import" href="my-view404.html">
 
 <dom-module id="my-app">
@@ -87,7 +87,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="experiment" href="[[rootPath]]experiment">Experiment</a>
           <a name="inputdata" href="[[rootPath]]inputdata">Input Data</a>
-          <a name="getdata" href="[[rootPath]]getdata">Get Data</a>
+          <a name="viewdata" href="[[rootPath]]viewdata">View Data</a>
         </iron-selector>
       </app-drawer>
 
@@ -108,7 +108,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             role="main">
           <my-experiment name="experiment"> </my-experiment>
           <my-inputdata name="inputdata"></my-inputdata>
-          <my-getdata name="getdata"></my-getdata>
+          <my-viewdata name="viewdata"></my-viewdata>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
       </app-header-layout>
@@ -143,7 +143,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _routePageChanged(page) {
         // If no page was found in the route data, page will be an empty string.
         // Default to 'auton' in that case.
-        this.page = page || 'getdata';
+        this.page = page || 'inputdata';
 
         // Close a non-persistent drawer when the page & route are changed.
         if (!this.$.drawer.persistent) {
