--- a/src/my-inputdata.html
+++ b/src/my-inputdata.html
@@ -250,18 +250,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 	  				/*console.log(this.$.team.value);
     				  console.log(form.serialize());*/
-
+                
+                var base = this;
       			$.ajax({
       			    url: "/scout",
       			    type: "post",
       			    data: info,//scout_form.serialize(),
       			    success: function(data) {
       			        if (data.result === "success") {
-      			            this.$.success_log.innerHTML = "Successfully updated!";
-      			            this.$.error_log.innerHTML = "";
+      			            base.$.success_log.innerHTML = "Successfully updated!";
+      			            base.$.error_log.innerHTML = "";
       			        } else if (data.result === "invalid") {
-      			            this.$.success_log.innerHTML = "";
-      			            this.$.error_log.innerHTML = "Invalid data. "
+      			            base.$.success_log.innerHTML = "";
+      			            base.$.error_log.innerHTML = "Invalid data. "
       			                + "Make sure that all small int values are from 0-255 (inclusive), "
       			                + "and ensure that the data is realistic <br><br> ERROR: " + data.error;
       			        }
