Fix thumbs-down color for a yellow card to follow consistency

--- a/src/my-inputdata.html
+++ b/src/my-inputdata.html
@@ -130,7 +130,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           		  <iron-label>
           		  	Yellow Card?
           		  </iron-label>
-          		  <toggle-icon id="yellow_card" required=true icon="icons:thumb-down" animation="flip-vertical" class="green-red"></toggle-icon>
+          		  <toggle-icon id="yellow_card" required=true icon="icons:thumb-up" animation="flip-vertical" class="green-red"></toggle-icon>
           		  <br>
           		  <br>
           		  <div class="rectangle"><b>Comments:</div></b>
