--- a/src/my-inputdata.html
+++ b/src/my-inputdata.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-number-input/paper-number-input.html">
 <link rel="import" href="../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../bower_components/paper-input/paper-textarea.html">
+<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-inputdata">
@@ -38,13 +39,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           color: var(--paper-red-500);
         };
       }
+
+      .notif_normal {
+        --paper-toast-background-color: #323232;
+        --paper-toast-color: #f1f1f1;
+      }
+
+      .notif_error {
+        --paper-toast-background-color: #ff3232;
+        --paper-toast-color: #f1f1f1;
+      }
     </style>
 
     <div class="card">
       <div class="rectangle" style="font-size:24px;">Auton</div>
+        <paper-toast id="notif_toast_error" class="notif_error" text="Notification!" vertical-align horizontal-align > </paper-toast>
+        <paper-toast id="notif_toast_normal" class="notif_normal" text="Notification!" vertical-align horizontal-align > </paper-toast>
       <div>
         <iron-form id="scout_form">
-					<form  method="post" action="/scout" >
+			<form  method="post" action="/scout" >
             <paper-input always-float-label align="center" id="match"label="Match Number: "></paper-input>
             <paper-input always-float-label align="center" id="team" label="Team: "></paper-input>
           
@@ -154,7 +167,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script>
     class MyInputData extends Polymer.Element {
       	static get is() { return 'my-inputdata'; }
-   
+
+            // Sets a notif message that pops up
+            set_notif_error_message(message) {
+                this.$.notif_toast_error.set("text", message)
+                this.$.notif_toast_error.center();
+                this.$.notif_toast_error.refit();
+                this.$.notif_toast_error.open();
+            }
+
+            // Sets a notif message that pops up
+            set_notif_normal_message(message) {
+                this.$.notif_toast_normal.set("text", message)
+                this.$.notif_toast_normal.center();
+                this.$.notif_toast_normal.refit();
+                this.$.notif_toast_normal.open();
+            }
+
     		load_data() {
 						var match = this.$.match.value;
 						var team = this.$.team.value;
@@ -182,8 +211,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 type: "GET",
                 success: (data) => { // We use Lambda (=>) instead of function() because it preserves "this"
                     if (data.length == 0) {
-												console.log("ANGERY");
-												return;
+												this.set_notif_normal_message("No data found! Starting new sheet");
+                        return;
 										}
         						console.log(data);
                     data = data[0]; // object is stored in array
@@ -204,8 +233,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 										this.$.comments.value = data.comments;
 								},
 			 					error: function(data) {
-										this.$.warning_log.innerHTML = "<br> <h4> ERROR </h4> Did not load data, " 
-													+ "prior data might exist. Be wary when uploading<br>";
+										this.set_notif_error_message("ERROR: Did not load data, " 
+													+ "prior data might exist, and you will OVERWRITE it."
+                          + "Be wary when uploading");
 								}
 						});
 
@@ -257,21 +287,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       			    type: "post",
       			    data: info,//scout_form.serialize(),
       			    success: function(data) {
-      			        if (data.result === "success") {
-      			            base.$.success_log.innerHTML = "Successfully updated!";
-      			            base.$.error_log.innerHTML = "";
-      			        } else if (data.result === "invalid") {
-      			            base.$.success_log.innerHTML = "";
-      			            base.$.error_log.innerHTML = "Invalid data. "
-      			                + "Make sure that all small int values are from 0-255 (inclusive), "
-      			                + "and ensure that the data is realistic <br><br> ERROR: " + data.error;
-      			        }
+                    base.set_notif_normal_message("Successfully Updated!");
+                    /*if (data.result === "success") {
+      			            this.set_notif_normal_message("Successfully Updated!");
+                    } else if (data.result === "invalid") {
+      			            // TODO: Do we even need this?
+                        this.set_notif_error_message("Invalid data! "
+                        + "Make sure that all inputs are less than 255 and greater than 0");
+      			        }*/
       			    },
-      			    
+
       			    error: function() {
-      			        this.$.error_log.innerHTML = "Invalid data. " 
-												+ "Make sure that all small int values are from 0-255 (inclusive), " 
-												+ "and ensure that the data is realistic <br><br> ERROR: " + data.error;
+                    base.set_notif_error_message("Invalid data! "
+                    + "Make sure that all inputs are less than 255 and greater than 0");
       			        /*$("#error_log").html("Failed to update. Try using QR (once we get that up and running)");
       			        $("#success_log").html("");*/
       			    }
